# mcp-the-force

./: .dockerignore  .env.example  .env.template  .gitignore  .gitleaks.toml  .mcp.json  .mcp_sessions.sqlite3-shm  .pre-commit-config.yaml  .repo_ignore  .secrets.baseline  ABORT_FIX_FINAL.md  ABORT_FIX_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMPLETE_ABORT_FIX.md  CONTRIBUTING.md  DEBUG_INSTRUCTIONS.md  Dockerfile.e2e  Dockerfile.loiter_killer  E2E_FIXES_STATUS.md  E2E_TEST_FIXES_SUMMARY.md  FINAL_ABORT_FIX.md  GITHUB_ISSUES_TODO.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  Makefile  O3_FINAL_ABORT_FIX.md  README.md  REAL_FINAL_ABORT_FIX.md  SECURITY.md  SECURITY_TODO.md  ULTIMATE_ABORT_FIX.md  USAGE_EXAMPLES.md  ai-eval-results-standardized.md  ai-eval-results.md  attach_to_mcp.py  benchmark_cli.py  benchmark_ollama.py  (+74 more)
.claude/agents/: api-interface-designer.md  async-samurai.md  cache-optimization-specialist.md  clean-code-craftsman.md  database-architect.md  hash-whisperer.md  integration-virtuoso.md  refactoring-expert.md  resilience-architect.md
.gcloud_old/: king_credentials.json
.github/workflows/: ci.yml  e2e-dind.yml  e2e.yml  release.yml
.secondbrain/: stores.json
MagicMock/get_settings().session_db_path/: 13400654864
design/: async_jobs.md
docs/: ADVANCED.md  API-REFERENCE.md  CONFIGURATION.md  INSTRUCTIONS.md  ai-eval.md  authentication-guide.md  cancellation-handling.md  chatter.md  choke-points-cli-agents.yaml  claude-integration-guide.md  cleanup-summary.md  cleanup.md  concurrency-testing-validation.md  configuration.md  context-vdb-rewrite.md  docker-in-docker-e2e-plan.md  e2e-test-setup.md  e2e-testing-plan.md  future-streaming.md  github-secrets-setup.md  google-cloud-auth-setup.md  google-cloud-auth-workaround.md  google-cloud-auth.md  grok-adapter.md  known-issues.md  litellm-refactor.md  logging-rewrite.md  loiter-killer-architecture.md  no-more-cheating.md  oai-vdb-refactor.md  project-memory-plan.md  solved-hanging-issue.md  testing-summary.md  the-force-rename.md  uvx-installation-summary.md  vdb-issues.md  victoria-log-issues.md  workload-identity-setup.md
docs/archive/: context-vdb-rewrite.md  litellm-refactor.md  solved-hanging-issue.md
docs/llm_docs/: openai_responses_api_guide.md  respones_raw_dump.md
docs/plans/: cli-agents-architecture.md  cli-agents-rct-findings.md  cli-agents-spec.md  image-input-support.md
docs/technical-debt/: cancellation-workaround.md
loiter_killer/: Dockerfile  README.md  loiter_killer.py  requirements.txt
mcp_second_brain/: __init__.py  __main__.py  cancellation_patch.py  config.py  errors.py  gemini_session_cache.py  grok_session_cache.py  operation_manager.py  patch_cancellation_handler.py  patch_fastmcp_cancel.py  patch_fastmcp_logging.py  patch_fastmcp_send_safe.py  patch_fastmcp_writer_safe.py  patch_mcp_cancel_response.py  patch_mcp_responder.py  patch_mcp_tool_handler.py  patch_stdio_logging.py  patch_stdio_reader.py  patch_stdio_writer.py  patch_write_safety.py  prompts.py  schemas.py  server.py  server.py.minimal_working  server_legacy.py  server_old.py  session_cache.py  sqlite_base_cache.py
mcp_second_brain/adapters/: __init__.py  attachment_search_declaration.py  base.py  logging_adapter.py  memory_search_declaration.py  mock_adapter.py  model_registry.py  openai_adapter.py  task_files_search_declaration.py  tool_handler.py  vertex_adapter.py  vertex_file_search.py
mcp_second_brain/cli/: __init__.py  config_cli.py  path_helper.py
mcp_second_brain/config/: model_loader.py  models.yaml
mcp_second_brain/logging/: __init__.py  handler.py  handlers.py  server.py  setup.py
mcp_second_brain/memory/: __init__.py  async_config.py  commit.py  config.py  conversation.py
mcp_second_brain/model_config/: __init__.py  model_loader.py  models.yaml
mcp_second_brain/tools/: __init__.py  base.py  dataclass_base.py  dataclass_definitions.py  definitions.py  descriptors.py  executor.py  gemini_search.py  integration.py  logging_tools.py  parameter_router.py  parameter_validator.py  prompt_engine.py  registry.py  safe_executor.py  safe_memory.py  search_attachments.py  search_history.py  search_memory.py  token_count.py  vector_store_manager.py
mcp_second_brain/utils/: context_builder.py  context_loader.py  debug_logger.py  docker_manager.py  file_tree.py  fs.py  json_extractor.py  log_filter.py  logging_filter.py  loiter_killer_client.py  prompt_builder.py  redaction.py  scope_manager.py  stable_list_cache.py  state_reset.py  thread_pool.py  token_counter.py  validation.py  vector_store.py  vector_store_files.py  vector_store_files_parallel.py
mcp_the_force/: __init__.py  __main__.py  __version__.py  config.py  errors.py  gemini_session_cache.py  grok_session_cache.py  main_wrapper.py  operation_manager.py  prompts.py  schemas.py  server.py  session_cache.py  sqlite_base_cache.py  unified_session_cache.py  vector_store_cache.py
mcp_the_force/adapters/: __init__.py  capabilities.py  errors.py  gemini_bridge.py  grok_bridge.py  history_search_declaration.py  litellm_base.py  logging_adapter.py  mock_adapter.py  model_registry.py  openai_bridge.py  param_model.py  params.py  protocol.py  registry.py  tool_dispatcher.py  tool_handler.py
mcp_the_force/cli/: __init__.py  config_cli.py
mcp_the_force/cli_agents/: __init__.py  availability.py  compactor.py  environment.py  executor.py  (+6 more)
scripts/: autotree.py  autotree_analysis.py  backup_databases.sh  benchmark-hook-performance.py  comprehensive_analysis.py  create-adc.sh  create-gcp-service-account.sh  install-history-hook.sh  install-memory-hook.sh  matrix_analysis.py  minimal-hook-benchmark.py  neutrinotree.py  optimized-commit-hook.py  optimized-post-commit-hook.sh  quarktree.py  quarktree_analysis.py  test.sh  tree_benchmark.py  ultimate_analysis.py
startup_optimization/: background_init.py  lazy_registry.py
tests/: README.md  conftest.py  conftest_fast.py  diagnose_ci.py  pytest_plugins.py  test_vertex_file_search.py
utils/: check_files_vs_relationship.py  check_vs_count.py  openai_cleanup_manager.py
(+705 files in other folders)
