[project]
name = "mcp_the_force"
version = "0.3.2"
description = "Local MCP \"The-Force\" server with prompt-safe file inlining and vector-store attachments."
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastmcp>=2.10.6",
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git@d4e14a4",
    "openai>=1.62.0",
    "google-genai>=0.8.0",
    "google-api-core>=2.0.0",
    "tiktoken>=0.8.0",
    "lxml>=5.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "pytest-asyncio>=0.21",
    "jsonschema>=4.0.0",
    "pyzmq>=25.0.0",
    "orjson>=3.9.0",
    "python-logging-loki>=0.3.1",
    "litellm>=1.74.8",
    "tokenizers==0.21.2",
]

[project.scripts]
mcp-the-force = "mcp_the_force.server:main"
mcp-config = "mcp_the_force.cli.config_cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.5",
    "anyio>=4.0",
    "pytest-mock>=3.11",
    "pytest-timeout>=2.1",
    "pytest-cov>=4.0",
    "httpx>=0.25",
    "coverage[toml]>=7.3",
]

dev = [
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
]

[tool.setuptools]
packages = ["mcp_the_force"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 10  # 10 seconds default timeout for unit tests
addopts = "--strict-markers --tb=short"
markers = [
    "asyncio: Mark test as requiring asyncio",
    "anyio: Mark test as requiring anyio",
    "unit: Pure logic tests, no I/O (<100ms)",
    "integration: Mocked I/O tests (<1s)",
    "expensive: Real API tests (manual only)",
    "benchmark: Performance tests (warning only in CI)",
    "e2e: End-to-end tests that require Docker",
    "slow: Tests that take more than 10 seconds",
    "timeout: Tests with custom timeout values",
    "no_virtual_clock: Disable virtual clock for tests that need real timing",
]
# Note: plugins loading moved to conftest.py for better compatibility

[tool.coverage.run]
source = ["mcp_the_force"]
omit = ["*/tests/*", "*/main.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true


[tool.ruff]
target-version = "py313"

